--- a/Fee details.html
+++ b/Fee details.html
@@ -12,14 +12,14 @@
   <h3>address:chinthaluru villagem, v.madugula mandal, visakhapatanam district code:592498</h3>
 <marquee behavior="alternate"bgcolor="orange" direction="left"><h4>school not open until carona clear</h4></marquee>
    <hr>
-   <a href="http:Home.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:about us.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:circular.html">Circular</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:fee details.html">Fee details</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:Student Login.html">Student Login</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:Bus's.html">Bus's</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:Results.html">Results</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href="http:Cantact us.html">Cantact us</a>
+   <a href=" Home.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" about us.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" circular.html">Circular</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" fee details.html">Fee details</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" Student Login.html">Student Login</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" Bus's.html">Bus's</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" Results.html">Results</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" Cantact us.html">Cantact us</a>
    <hr>
 <h2>The Fee details</h2>
    <table border="1" width="75%">
