--- a/circular.html
+++ b/circular.html
@@ -13,7 +13,7 @@
   <h3>address:chinthaluru villagem, v.madugula mandal, visakhapatanam district code:592498</h3>
 <marquee behavior="alternate"bgcolor="orange" direction="left"><h4>school not open until carona clear</h4></marquee>
    <hr>
-  <a href=" Home.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
+  <a href="  index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" about us.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" circular.html">Circular</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" fee details.html">Fee details</a>&nbsp;&nbsp;&nbsp;&nbsp;
