--- a/Results.html
+++ b/Results.html
@@ -16,9 +16,9 @@
   <a href="  index.html">Home</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" about us.html">About us</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" circular.html">Circular</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href=" fee details.html">Fee details</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" Fee details.html">Fee details</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" Student Login.html">Student Login</a>&nbsp;&nbsp;&nbsp;&nbsp;
-   <a href=" Bus's.html">Bus's</a>&nbsp;&nbsp;&nbsp;&nbsp;
+   <a href=" bus's.html">Bus's</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" Results.html">Results</a>&nbsp;&nbsp;&nbsp;&nbsp;
    <a href=" Cantact us.html">Cantact us</a>
    <hr>
